Minor updates in application.properties file

--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=product-service
+server.port=8080
+
 spring.data.mongodb.uri=mongodb://root:iamroot@localhost:27017/${spring.data.mongodb.database}
 spring.data.mongodb.database=${spring.application.name}
 
