--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,3 +14,18 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: iamroot
     volumes: 
       - ./.mongo-products:/data.db #Mapping mongo's default DB data storage path to dir outside of container
+
+  inventory-orders: 
+    image: postgres:latest
+    expose:
+      - "5432"
+    ports:
+      - 5432:5432
+    restart: always
+    environment:
+      POSTGRES_DB: order-service
+      POSTGRES_USER: technolearninventory
+      POSTGRES_PASSWORD: technolearnpwd
+      PGDATA: /data/postgres
+    volumes: 
+      - ./.postgres-inventory:/data/postgres #Mapping postgres's DB data storage path to dir outside of container
