creating docker for new postgres orders DB and changing nomenclature in inventory-service application.properties

--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8081
 
 ### Data Source ###
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/order-service
+spring.datasource.url=jdbc:postgresql://localhost:5432/inventory-service
 spring.datasource.username=technolearninventory
 spring.datasource.password=technolearnpwd
 spring.jpa.hibernate.ddl-auto=create-drop
