--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,17 +15,33 @@ services:
     volumes: 
       - ./.mongo-products:/data.db #Mapping mongo's default DB data storage path to dir outside of container
 
-  inventory-orders: 
+  postgres-inventory: 
     image: postgres:latest
     expose:
       - "5432"
     ports:
       - 5432:5432
-    restart: always
+    restart: unless-stopped
     environment:
-      POSTGRES_DB: order-service
+      POSTGRES_DB: inventory-service
       POSTGRES_USER: technolearninventory
       POSTGRES_PASSWORD: technolearnpwd
       PGDATA: /data/postgres
     volumes: 
       - ./.postgres-inventory:/data/postgres #Mapping postgres's DB data storage path to dir outside of container
+
+  postgres-orders: 
+    image: postgres:latest
+    expose:
+      - "5431"
+    ports:
+      - 5431:5431
+    command: -p 5431  #5431 is not a default postgres port thus we have to provide it as a start cli argumnent with -p flag
+    restart: unless-stopped
+    environment:
+      POSTGRES_DB: order-service
+      POSTGRES_USER: technolearnorders
+      POSTGRES_PASSWORD: technolearnpwd
+      PGDATA: /data/postgres
+    volumes: 
+      - ./.postgres-orders:/data/postgres #Mapping postgres's DB data storage path to dir outside of container
