--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5431/order-service
 spring.datasource.username=technolearnorders
 spring.datasource.password=technolearnpwd
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 
 #Enabling Spring Boot actuator endpoints
 management.endpoints.web.exposure.include=*
