adding Netflix Eureka discovery server

--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -13,4 +13,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #Enabling Spring Boot actuator endpoints
 management.endpoints.web.exposure.include=*
 
-inventory.service.endpoint=http://localhost:8081/api/inventory
+### For Interservice communication ###
+inventory.service.endpoint=http://inventory-service/api/inventory
+
+### Eureka Configuration ###
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
