--- a/discovery-server/pom.xml
+++ b/discovery-server/pom.xml
@@ -8,27 +8,22 @@
 		<artifactId>microservices-root</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-
-	<artifactId>product-service</artifactId>
 	
-	<dependencies>		
+	<artifactId>discovery-server</artifactId>
+	
+	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.testcontainers</groupId>
-			<artifactId>mongodb</artifactId>
-			<scope>test</scope>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
 		</dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-        </dependency>
 	</dependencies>
 
 </project>
