--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.hibernate.ddl-auto=create-drop
 #Enabling Spring Boot actuator endpoints
 management.endpoints.web.exposure.include=*
 
+### Eureka Configuration ###
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
