--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.data.mongodb.database=${spring.application.name}
 
 #Enabling Spring Boot actuator endpoints
 management.endpoints.web.exposure.include=*
+
+### Eureka Configuration ###
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
