--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,5 +1,32 @@
-eureka.instance.hostname=localhost
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-server.port=8761
+server.port=8080
+spring.application.name=api-gateway
+logging.level.root= INFO
+logging.level.org.springframework.cloud.gateway.route.RouteDefinitionRouteLocator= INFO
+logging.level.org.springframework.cloud.gateway= TRACE
+
+## Product Service Route
+spring.cloud.gateway.routes[0].id=product-service
+spring.cloud.gateway.routes[0].uri=lb://product-service
+spring.cloud.gateway.routes[0].predicates[0]=Path=/api/products
+
+## Order Service Route
+spring.cloud.gateway.routes[1].id=order-service
+spring.cloud.gateway.routes[1].uri=lb://order-service
+spring.cloud.gateway.routes[1].predicates[0]=Path=/api/orders
+
+## Order Service Route
+spring.cloud.gateway.routes[2].id=inventory-service
+spring.cloud.gateway.routes[2].uri=lb://inventory-service
+spring.cloud.gateway.routes[2].predicates[0]=Path=/api/inventory
+
+## Discovery Server Route
+spring.cloud.gateway.routes[3].id=discovery-server
+spring.cloud.gateway.routes[3].uri=http://localhost:8761
+spring.cloud.gateway.routes[3].predicates[0]=Path=/eureka/web
+spring.cloud.gateway.routes[3].filters[0]=SetPath=/
+
+## Discovery Server Static Resources Route
+spring.cloud.gateway.routes[4].id=discovery-server-static
+spring.cloud.gateway.routes[4].uri=http://localhost:8761
+spring.cloud.gateway.routes[4].predicates[0]=Path=/eureka/**
