--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=inventory-service
-server.port=0
+server.port=9001
 
 ### Data Source ###
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -8,8 +8,16 @@ spring.datasource.username=technolearninventory
 spring.datasource.password=technolearnpwd
 spring.jpa.hibernate.ddl-auto=create-drop
 
-#Enabling Spring Boot actuator endpoints
-management.endpoints.web.exposure.include=*
+#Enabling Spring Boot actuator endpoints with tracing
+management.endpoints.web.exposure.include=prometheus
+management.tracing.enabled=true
+management.tracing.propagation.type=B3
+management.tracing.sampling.probability=1.0
+# For Exemplars to work we need histogram buckets
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
+# traceID and spanId are predefined MDC keys - we want the logs to include them
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
+
 
 ### Eureka Configuration ###
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
