Adding trace enabling properties in application.properties files

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -30,3 +30,13 @@ spring.cloud.gateway.routes[3].filters[0]=SetPath=/
 spring.cloud.gateway.routes[4].id=discovery-server-static
 spring.cloud.gateway.routes[4].uri=http://localhost:8761
 spring.cloud.gateway.routes[4].predicates[0]=Path=/eureka/**
+
+#Enabling Spring Boot actuator endpoints with tracing
+management.endpoints.web.exposure.include=prometheus
+management.tracing.enabled=true
+management.tracing.propagation.type=B3
+management.tracing.sampling.probability=1.0
+# For Exemplars to work we need histogram buckets
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
+# traceID and spanId are predefined MDC keys - we want the logs to include them
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
