--- a/discovery-server/src/main/resources/application.properties
+++ b/discovery-server/src/main/resources/application.properties
@@ -3,3 +3,13 @@ eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 server.port=8761
+
+#Enabling Spring Boot actuator endpoints with tracing
+management.endpoints.web.exposure.include=prometheus
+management.tracing.enabled=true
+management.tracing.propagation.type=B3
+management.tracing.sampling.probability=1.0
+# For Exemplars to work we need histogram buckets
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
+# traceID and spanId are predefined MDC keys - we want the logs to include them
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
