--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,12 +1,19 @@
 spring.application.name=product-service
-server.port=0
+server.port=9003
 
 ### Data Source ###
 spring.data.mongodb.uri=mongodb://root:iamroot@localhost:27017/${spring.data.mongodb.database}
 spring.data.mongodb.database=${spring.application.name}
 
-#Enabling Spring Boot actuator endpoints
-management.endpoints.web.exposure.include=*
+#Enabling Spring Boot actuator endpoints with tracing
+management.endpoints.web.exposure.include=prometheus
+management.tracing.enabled=true
+management.tracing.propagation.type=B3
+management.tracing.sampling.probability=1.0
+# For Exemplars to work we need histogram buckets
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
+# traceID and spanId are predefined MDC keys - we want the logs to include them
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
 
 ### Eureka Configuration ###
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
