--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=order-service
-server.port=0
+server.port=9002
 
 ### Data Source ###
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -10,8 +10,15 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 
-#Enabling Spring Boot actuator endpoints
-management.endpoints.web.exposure.include=*
+#Enabling Spring Boot actuator endpoints with tracing
+management.endpoints.web.exposure.include=prometheus
+management.tracing.enabled=true
+management.tracing.propagation.type=B3
+management.tracing.sampling.probability=1.0
+# For Exemplars to work we need histogram buckets
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
+# traceID and spanId are predefined MDC keys - we want the logs to include them
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
 
 ### For Interservice communication ###
 inventory.service.endpoint=http://inventory-service/api/inventory
