--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,17 @@
                     <target>16</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>3.2.1</version>
+                <configuration>
+                    <from>
+                        <image>arm64v8/eclipse-temurin:17-jre-ubi9-minimal</image>
+                    </from>
+                    <to><image>registry.hub.docker.com/technolearn/${artifactId}</image></to>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
