Fixing the mongo connection string in the *.properties files

--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=product-service
 server.port=9003
 
 ### Data Source ###
-spring.data.mongodb.uri=mongodb://root:iamroot@localhost:27017/${spring.data.mongodb.database}
+spring.data.mongodb.uri=mongodb://root:iamroot@localhost:27017/${spring.data.mongodb.database}?authSource=admin
 spring.data.mongodb.database=${spring.application.name}
 
 #Enabling Spring Boot actuator endpoints with tracing
