--- a/product-service/src/main/resources/application-docker.properties
+++ b/product-service/src/main/resources/application-docker.properties
@@ -2,7 +2,7 @@ spring.application.name=product-service
 server.port=8080
 
 ### Data Source ###
-spring.data.mongodb.uri=mongodb://root:iamroot@mongo-products:27017/${spring.data.mongodb.database}
+spring.data.mongodb.uri=mongodb://root:iamroot@mongo-products:27017/${spring.data.mongodb.database}?authSource=admin
 spring.data.mongodb.database=${spring.application.name}
 
 #Enabling Spring Boot actuator endpoints with tracing
